Containers/Kubernetes/K8S-training/activity/solution/mariadb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mariadb
  namespace: activity
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mariadb
        tier: database
    spec:
      securityContext:
        runAsUser: 1001
        fsGroup: 1001
      containers:
      - name: mariadb
        image: bitnami/mariadb:latest
        ports:
        - name: mysql
          containerPort: 3306
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          exec:
            command:
            - mysqladmin
            - ping
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          exec:
            command:
            - mysqladmin
            - ping
        volumeMounts:
        - name: data
          mountPath: /bitnami/mariadb
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mariadb-data
