Containers/Kubernetes/K8S-training/activity/solution/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
  namespace: activity
  labels:
    app: wordpress
    tier: frontend
    track: stable
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
        track: stable
    spec:
      containers:
      - name: wordpress
        image: bitnami/wordpress:4.9.4
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        livenessProbe:
          initialDelaySeconds: 120
          httpGet:
            path: /wp-login.php
            port: http
        readinessProbe:
          initialDelaySeconds: 30
          httpGet:
            path: /wp-login.php
            port: http
        volumeMounts:
        - mountPath: /bitnami/apache
          name: wordpress-data
          subPath: apache
        - mountPath: /bitnami/wordpress
          name: wordpress-data
          subPath: wordpress
        - mountPath: /bitnami/php
          name: wordpress-data
          subPath: php
      volumes:
      - name: wordpress-data
        emptyDir: {}
