Containers/Kubernetes/K8S-training/activity/solution/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: activity
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
  selector:
    app: wordpress
    tier: frontend
